# aueb-cs-masters

./: .gitignore  CMakeLists.txt  NLP_1st_Assignment.py  README.md  RL-hw1.py  Research-Proposal.tex  avg_perf_optimisations_o3.csv  incremental_vs_simple_avg_perf_assessment.cpp  levenshtein_distance.cpp  merge_sort.cpp  visualise.py
blockchain/: CryptoSOS.sol  MultiSOS.sol  README.md  Readme.txt
convex/: main.py  requirements.txt  three_ways.py
cryptography/: \  add_round_key_b67b9a529ae739156107a74b14adde98.py  aes_decrypt_f491744105801ec03d6a6f7a0e7f8101.py  attacking_ciphertext_api.py  bean_counter.py  crypto-web.py  diffusion_ee6215282094b4ae8cd1b20697477712.py  ecb_cbc_wtf.py  ecb_oracle.py  exploit_api.py  flip_cookie.py  main.py  modul_exp.py  sbox_8fc04ffb95faf5a5e6959195d5e2d94e.py  symmetry.py
first-semester-exams/: Notes.tex
formal-methods/: Untitled.tla
natural-language-processing/: NLP_Homework1_Code.ipynb  NLP_Homework2_Sentiment_Analysis.ipynb  NLP_Homework3_9.ipynb  NLP_Homework4_2.ipynb  NLP_Homework4_2_new_version.ipynb  NLP_Homework4_RNNs.ipynb  Per-Sentence-Results-Final.csv  print_results_final.txt
random-impls/: CMakeLists.txt  avg_perf_no_optimisations.csv  levenshtein_distance.cpp  levenshtein_distance.h  pybind11_wrapper.cpp  shortest_paths_in_graph.cpp  visualise.py
reinforcement-learning/: Cliff World with all methods  RL-Hw4.py  RL-hw2.py  RL-hw3.py  RL-hw6.py  RL-hw6.tex  RL-hw7.py
research-2/: README.md
research-methodology/: Research-Methodology-Paper.bib  Runtime-Verification-Of-Performance-Temporal-Constraints.bbl  Runtime-Verification-Of-Performance-Temporal-Constraints.blg  Runtime-Verification-Of-Performance-Temporal-Constraints.tex
social-networks/: Social-Networks-Subject.txt  presentation.nav  presentation.tex
thesis/: initial_research.bbl  initial_research.blg  sources.bib  (+7 more)
(+25 files in other folders)
